--- a/m1/w1/d2/Eserciziod2.html
+++ b/m1/w1/d2/Eserciziod2.html
@@ -9,31 +9,23 @@
 
 </head>
 
-<header>Primi passi operativi per creare un modello di pagina HTML per un post. Scopri come iniziare in modo facile!</header>
+<header>Primi passi operativi per creare un modello di pagina HTML per un post. Scopri come iniziare in modo facile!
+</header>
 
 <body>
-
-
-    
     <hr>
-
-
-
 
     <img src="logo.svg" alt="Logo Epicode"> <br>
 
-
     <h1>Epicode - Il blog dei developers</h1>
-
-
-
 
     <table>
         <style>
-            table{
+            table {
                 width: 100px;
             }
-            td{
+
+            td {
                 border: 1px solid black
             }
         </style>
@@ -78,9 +70,9 @@
     <h3>Diffusione dei CSS</h3>
     <table>
         <tr>
-            <td>Anno</td>
-            <td>% di utilizzo</td>
-            <td>Supporto browser</td>
+            <th>Anno</th>
+            <th>% di utilizzo</th>
+            <th>Supporto browser</th>
         </tr>
         <tr>
             <td>2000</td>
@@ -154,7 +146,7 @@
     Blog Epicode &copy;2021 <br>
 
     Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P. IVA 00112233. <br>
-     <a href="info@epicode.school">info@epicode.school</a>
+    <a href="info@epicode.school">info@epicode.school</a>
 </footer>
 
 
