--- a/m1/w1/progettosett1/start/index.html
+++ b/m1/w1/progettosett1/start/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/stile.css">
 
+    <script src="https://kit.fontawesome.com/e0ee163086.js" crossorigin="anonymous"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
@@ -35,7 +37,7 @@
             <p>Smetti di inseguire i titoli, inizia a lavorare. <br> Mentre tutti vogliono arricchire il CV, tu pensa ad
                 arricchire le tue competenze.</p>
 
-            <a href="index.html" title="partiamo">PARTIAMO!</a>
+            <button>PARTIAMO!</button>
 
         </section>
 
@@ -46,9 +48,9 @@
         </p>
 
         <h3>Lavora dove vuoi</h3>
-        <p>Lavora da casa, in riva al mare o in montagna.</p>
+        <p>Lavora da casa, in riva al mare o in montagna.</p> <br>
 
-        <img src="assets/images/notebook.jpg" alt="immagine di un pc">
+        <img id="fototonda" src="assets/images/notebook.jpg" alt="immagine di un pc">
 
 
         <h3>Scegli il tuo ruolo</h3>
@@ -71,6 +73,7 @@
         <div class="quadbordati">
             <img src="assets/images/foto1.jpg" alt="immagine di un pc">
 
+            
             <h3>Il tuo PC</h3>
             <p>Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
         </div>
@@ -101,9 +104,12 @@
         <h2>Contattaci</h2>
 
         <div>
+            <i class="fa-solid fa-phone"></i>
             <a href="index.html" title="numero">(+39)11223456</a> <br>
+            <i class="fa-solid fa-envelope"></i>
             <a href="index.html" title="email">info@epicode.school</a> 
-            <p>Via Appia 1 - 00100 Roma (RM)</p>
+            
+            <p><i class="fa-solid fa-arrow-up-right"></i> Via Appia 1 - 00100 Roma (RM)</p>
 
             <hr>
 
