--- a/m1/w2/progettosett2/start-20220323T114750Z-001/start/chi-siamo.html
+++ b/m1/w2/progettosett2/start-20220323T114750Z-001/start/chi-siamo.html
@@ -5,46 +5,86 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="">
-  <title>Chi siamo</title>  
+  <title>Chi siamo</title>
 
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/stile.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet">
 
-<script src="https://kit.fontawesome.com/e0ee163086.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/e0ee163086.js" crossorigin="anonymous"></script>
 </head>
 
 
 <header>
   <div>
-      <img src="assets/images/logo.png" alt="logo del blog" width="250" height="60">
+    <img src="assets/images/logo.png" alt="logo del blog" width="250" height="60">
   </div>
   <nav>
     <i id="icona" class="fa-solid fa-ellipsis"></i>
-      <ul>
-          <li><a href="index.html" title="Home Page">Home</a></li>
-          <li><a href="chi-siamo.html" title="Elenco degli articoli tecnici pubblicati">Chi siamo</a></li>
-          <li><a href="contatti.html" title="Candidati inviando un tuo cv">Contatti</a></li>
-      </ul>
+    <ul>
+      <li><a href="index.html" title="Home Page">Home</a></li>
+      <li><a href="chi-siamo.html" title="Elenco degli articoli tecnici pubblicati">Chi siamo</a></li>
+      <li><a href="contatti.html" title="Candidati inviando un tuo cv">Contatti</a></li>
+    </ul>
   </nav>
 </header>
 
-  <article>
-    <h1>We are coder</h1>
-    <p class="paragrafi">Epicode School nasce con l’obiettivo di rivoluzionare la formazione in ambito tech. Vogliamo essere il movimento dei creatori digitali che il mercato richiede: formiamo, forniamo e aggiorniamo specialisti con la missione di trasformare le aziende dall’interno e offrire ai giovani sicure prospettive di carriera. Siamo a Roma ma arriviamo in tutta Italia, per creare la community che rivoluzionerà il mondo del lavoro.</p>
+<article>
+  <h1>We are coder</h1>
+  <p class="paragrafi">Epicode School nasce con l’obiettivo di rivoluzionare la formazione in ambito tech. Vogliamo
+    essere il movimento dei creatori digitali che il mercato richiede: formiamo, forniamo e aggiorniamo specialisti con
+    la missione di trasformare le aziende dall’interno e offrire ai giovani sicure prospettive di carriera. Siamo a Roma
+    ma arriviamo in tutta Italia, per creare la community che rivoluzionerà il mondo del lavoro.</p>
 
-    <img src="assets/images/foto1.jpg" alt="immagine pc">
+  <img class="immag" src="assets/images/foto1.jpg" alt="immagine pc">
 
-    <p>Investiamo sul talento e vogliamo dimostrartelo: effettua un colloquio di selezione per accedere ad una delle 5 borse di studio disponibili.</p>
+  <p class="paragrafi">Investiamo sul talento e vogliamo dimostrartelo: effettua un colloquio di selezione per accedere
+    ad una delle 5 borse di studio disponibili.</p>
 
-    <img src="assets/images/foto2.jpg" alt="immagine pc 2">
+  <img class="immag" src="assets/images/foto2.jpg" alt="immagine pc 2">
 
-    <p class="paragrafi">Riceverai subito l'esito, quindi ti consigliamo di contattarci prima che le borse di studio si esauriscano: contattaci e candidati subito.</p>
+  <p class="paragrafi">Riceverai subito l'esito, quindi ti consigliamo di contattarci prima che le borse di studio si
+    esauriscano: contattaci e candidati subito.</p>
 
-    <table>
+
+    <h3>Prezzi dei corsi</h3>
+  <div id="tabella">
+    
+
+    <div class="itembold" id="item1">Base 500€ </div>
+    <div class="itembold" id="item2">Intermedio 1000€ </div>
+    <div class="itembold" id="item3">Avanzato 2000€ </div>
+    <div class="itembold" id="item1-2">Base 500€ </div>
+    <div class="itembold" id="item22">Intermedio 1000€ </div>
+    <div class="itembold" id="item32">Avanzato 2000€ </div>
+    <div class="itembold" id="item13">Base 500€ </div>
+    <div class="itembold" id="item23">Intermedio 1000€ </div>
+    <div class="itembold" id="item33">Avanzato 2000€ </div>
+
+
+
+
+    <div id="item4">30 ore di formazione</div>
+    <div id="item5">Tutte le caratteristiche del corso base</div>
+    <div id="item6">Tutte le caratteristiche del corso intermedio</div>
+
+
+    <div id="item7">Supporto post corso</div>
+    <div id="item8">Rateizzazione in 12 mesi</div>
+    <div id="item9">Videoregistrazioni</div>
+
+    <div id="item10">Stage aziendale</div>
+    <div id="item11">Ripetizione del corso</div>
+    <div id="item12">Supporto 24h dedicato</div>
+
+
+  </div>
+
+
+  <!--  <table>
       <caption>Prezzi dei corsi</caption>
       <thead>
         <tr>
@@ -72,24 +112,30 @@
         </tr>
         </tbody>
 
-    </table>
-  </article>
+    </table>  -->
 
-  
-  <footer>
-    <h4>Chi siamo</h4>
-    <p>Epicode School nasce con l'obiettivo di rivoluzionare la formazione in ambito tech.</p>
-
-    <h4>Ti piace ciò che vedi? Condividilo con i tuoi amici!</h4>
+</article>
 
 
-    <h4>Iscriviti alla nostra newsletter</h4>
-    <input type="email">
-    <button>Va bene!</button>
+<footer>
+  <h4>Chi siamo</h4>
+  <p class="paragrafi">Epicode School nasce con l'obiettivo di rivoluzionare la formazione in ambito tech.</p>
 
-    <h5>&copy;2021 Epicode Web Developer school  - Via Appia 1. 00100 Roma (RM) - Tel.06-12345678</h5>
+  <h4>Ti piace ciò che vedi? Condividilo con i tuoi amici!</h4>
 
-  </footer>
+  <p><i id="icona" class="fa-brands fa-facebook-square"></i> <i id="icona" class="fa-brands fa-instagram"></i> <i
+      id="icona" class="fa-brands fa-linkedin"></i></p>
+
+
+  <h4>Iscriviti alla nostra newsletter</h4>
+  <div><input type="email">
+    <button type="submit">Va bene!</button>
+  </div>
+
+
+  <h5>&copy;2021 Epicode Web Developer school - Via Appia 1. 00100 Roma (RM) - Tel.06-12345678</h5>
+
+</footer>
 
 <body>
 
