--- a/m1/w2/progettosett2/start-20220323T114750Z-001/start/contatti.html
+++ b/m1/w2/progettosett2/start-20220323T114750Z-001/start/contatti.html
@@ -35,37 +35,41 @@
     <h1>Contatti</h1>
 
     <form action="">
-      <p><input type="text" name="nome" placeholder="Nome e cognome"></p>
-      <p><input type="email" name="email" placeholder="Indirizzo valido nome@casella.com"></p>
-      <p><textarea name="messaggio" id="" cols="30" rows="10" placeholder="Inserisci il tuo messaggio">Inserisci il messaggio</textarea></p>
+      <p><input class="input3" type="text" name="nome" placeholder="Nome e cognome"></p>
+      <p><input class="input3" type="email" name="email" placeholder="Indirizzo valido nome@casella.com"></p>
+      <p><textarea class="input3" name="messaggio" id="" cols="30" rows="10" placeholder="Inserisci il tuo messaggio">Inserisci il messaggio</textarea></p>
       <p><button type="submit">Invia il messaggio</button></p>
     
     </form>
 
     <aside>
       <h2>Sede formativa</h2>
-      <p>Via Appia 1 </p>
-      <p>00100 Roma (RM)</p><br>
-      <p>info@epicode.school</p>
-      <p>+390612345956</p>
+      <div class="paragrafi"><p>Via Appia 1 </p>
+        <p>00100 Roma (RM)</p><br>
+        <p>info@epicode.school</p>
+        <p>+390612345956</p></div>
+      
 
       <h2>Lavora con noi</h2>
-      <p>Per poterti candidare ad un ruolo da docente invia il tuo cv a job@epicode.school</p>
+      <p class="paragrafi">Per poterti candidare ad un ruolo da docente invia il tuo cv a job@epicode.school </p>
     </aside>
   </body>
 
   <footer>
     <h4>Chi siamo</h4>
-    <p>Epicode School nasce con l'obiettivo di rivoluzionare la formazione in ambito tech.</p>
+    <p class="paragrafi">Epicode School nasce con l'obiettivo di rivoluzionare la formazione in ambito tech.</p>
 
     <h4>Ti piace ciò che vedi? Condividilo con i tuoi amici!</h4>
 
+    <p><i id="icona" class="fa-brands fa-facebook-square"></i> <i id="icona" class="fa-brands fa-instagram"></i> <i id="icona" class="fa-brands fa-linkedin"></i></p>
+
 
     <h4>Iscriviti alla nostra newsletter</h4>
-    <input type="email">
-    <button>Va bene!</button>
+    <div><input type="email">
+      <button type="submit">Va bene!</button></div>
 
-    <h5>&copy;2021 Epicode Web Developer school  - Via Appia 1. 00100 Roma (RM) - Tel.06-12345678</h5>
+
+    <h5>&copy;2021 Epicode Web Developer school - Via Appia 1. 00100 Roma (RM) - Tel.06-12345678</h5>
 
   </footer>
 
