--- a/m1/w2/progettosett2/start-20220323T114750Z-001/start/index.html
+++ b/m1/w2/progettosett2/start-20220323T114750Z-001/start/index.html
@@ -135,8 +135,8 @@
 
 
       <h4>Iscriviti alla nostra newsletter</h4>
-      <input type="email">
-      <div id="pulsante2"><button type="submit">Va bene!</button></div>
+      <div><input type="email">
+        <button type="submit">Va bene!</button></div>
 
 
       <h5>&copy;2021 Epicode Web Developer school - Via Appia 1. 00100 Roma (RM) - Tel.06-12345678</h5>
