--- a/m1/w2/progettosett2/start-20220323T114750Z-001/start/chi-siamo.html
+++ b/m1/w2/progettosett2/start-20220323T114750Z-001/start/chi-siamo.html
@@ -154,7 +154,7 @@
       
       <h4>Iscriviti alla nostra newsletter</h4>
       <div><input type="email">
-        <button type="submit">Va bene!</button>
+        <button class="pulsanti" type="submit">Va bene!</button>
       </div>
     </div>
   </div>
