--- a/m1/w2/progettosett2/start-20220323T114750Z-001/start/contatti.html
+++ b/m1/w2/progettosett2/start-20220323T114750Z-001/start/contatti.html
@@ -51,7 +51,7 @@
       <h1>Contatti</h1>
       <p><input class="input3" type="text" name="nome" placeholder="Nome e cognome"></p>
       <p><input class="input3" type="email" name="email" placeholder="Indirizzo valido nome@casella.com"></p>
-      <p><textarea class="input3" name="messaggio" id="" cols="30" rows="10"
+      <p><textarea name="messaggio" id="" cols="30" rows="10"
           placeholder="Inserisci il tuo messaggio">Inserisci il messaggio</textarea></p>
       <p><button type="submit">Invia il messaggio</button></p>
 
@@ -91,7 +91,7 @@
 <footer>
   <div id="footerbox">
     <div class="footerbox1">
-      <h4 class="footerbox1">Chi siamo</h4>
+      <h4 >Chi siamo</h4>
       <p class="paragrafi">Epicode School nasce con l'obiettivo di rivoluzionare la formazione in ambito tech.</p>
 
     </div>
@@ -105,11 +105,11 @@
     </div>
 
 
-    <div class="footerbox1">
+    <div id="footerboxchemistafacendoimpazzire" class="footerbox1">
 
       <h4>Iscriviti alla nostra newsletter</h4>
       <div><input type="email">
-        <button type="submit">Va bene!</button>
+        <button class="pulsanti" type="submit">Va bene!</button>
       </div>
     </div>
   </div>
