--- a/m1/w2/progettosett2/start-20220323T114750Z-001/start/index.html
+++ b/m1/w2/progettosett2/start-20220323T114750Z-001/start/index.html
@@ -167,7 +167,7 @@
         <div class="footerbox1" >
           
           <h4>Iscriviti alla nostra newsletter</h4>
-          <div><input type="email">
+          <div id="ft"><input type="email">
             <button class="pulsanti" type="submit">Va bene!</button>
           </div>
         </div>
