--- a/m1/w3/d3/escape.html
+++ b/m1/w3/d3/escape.html
@@ -10,14 +10,14 @@
     
     <script>
 
-        //coalescenza
-        let eta = prompt('quanti anni hai?') || 0;
-        console.log(eta);
+        var testo = 'stringa a \n più parole';
+        alert(testo)
 
-        //ternario
-        let accesso = (eta >= 18) ? 'Accesso consentito' : 'Accesso Negato';
 
-        document.write(accesso)
+        /*leggibilità*/
+
+        document.querySelector('body')
+        .style.color = red;
 
     </script>
 </body>
