--- a/m1/w3/d4/array/dom.html
+++ b/m1/w3/d4/array/dom.html
@@ -8,17 +8,23 @@
 </head>
 <body>
     
-    <script>
+<script>
 
-        //coalescenza
-        let eta = prompt('quanti anni hai?') || 0;
-        console.log(eta);
+let calcolo = 2 + 2
+console.log(calcolo)
 
-        //ternario
-        let accesso = (eta >= 18) ? 'Accesso consentito' : 'Accesso Negato';
+let calcolo = "2 + 2"
+console.log(calcolo)
 
-        document.write(accesso)
+console.log(eval(calcolo)) //prende i valori numerici dalla stringa
 
-    </script>
+
+
+
+</script>
+
+
+
+
 </body>
 </html>
