--- a/m1/w3/d4/array/math.html
+++ b/m1/w3/d4/array/math.html
@@ -8,17 +8,14 @@
 </head>
 <body>
     
+
+
+
+
     <script>
 
-        //coalescenza
-        let eta = prompt('quanti anni hai?') || 0;
-        console.log(eta);
-
-        //ternario
-        let accesso = (eta >= 18) ? 'Accesso consentito' : 'Accesso Negato';
-
-        document.write(accesso)
-
+        console.log( Math.round(10.3));
+        console.log( math)
     </script>
 </body>
 </html>
