--- a/m1/w3/Progettow3/calcolatrice.html
+++ b/m1/w3/Progettow3/calcolatrice.html
@@ -15,9 +15,9 @@
 
 
 
-    <h1>Fabi's basic calculator</h1>
+   
 
-    <input class="bott" id="display" placeholder="0" type="text">
+    <input  id="display" placeholder="0" type="text">
 
 
     <div id="bottoni">
@@ -42,6 +42,7 @@
 
 
     </div>
+    
 
 
 
