--- a/m1/w3/Progettow3/calcolatrice.html
+++ b/m1/w3/Progettow3/calcolatrice.html
@@ -39,6 +39,7 @@
         <button class="bott" id="bottone-" data-simbolo="-" onclick="aggiungiSimbolo(this)">-</button>
         <button class="bott" id="bottonetot" onclick="calcola()">=</button>
         <button class="bott" id="bottonereset" onclick="reset()">C</button>
+        <button class="bott" id="bottoneback" onclick="back()">CE</button>
 
 
     </div>
