--- a/m2/w2/progettom2w2/index.html
+++ b/m2/w2/progettom2w2/index.html
@@ -82,26 +82,26 @@
 
     <!--SEZ PRIMO PIANO-->
 
-    <section class="first-section">
-        <div class="sectionF px-md-2 py-5 text-bg-dark">
-            <div class="col-md-6 px-4">
-                <h1 class="display-3 fst-italic titolo">Find your Basic-Veggy or Mix them in special dishes</h1>
-                <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ab at excepturi. Sunt
-                    excepturi distinctio libero. Nostrum dolorem unde quo praesentium, iure, vitae at commodi nihil
-                    maxime corrupti, repellendus atque?</p>
-                <button class="first-btn lead mb-0 bg-success buttonh"><a href="#" class="text-white  fw-bold ">Buy
-                        now!</a></button>
-            </div>
+
+    <div class="sectionF px-md-2 py-5 text-bg-dark">
+        <div class=" col-md-6 px-4">
+            <h1 class="display-3 fst-italic titolo">Find your Basic-Veggy or Mix them in special dishes</h1>
+            <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ab at excepturi. Sunt
+                excepturi distinctio libero. </p>
+            <button class="first-btn lead mb-0 bg-success buttonh"><a href="#" class="text-white  fw-bold ">Buy
+                    now!</a></button>
         </div>
-
-    </section>
-
+    </div>
 
 
     <!--SEZ PRIMO PIANO Card-->
 
+    <div class="spaziodivisorio">
 
-    <div class="container  my-5" id="custom-cards">
+    </div>
+
+
+    <div class="container" id="custom-cards">
         <h2 class="pb-2 border-bottom text-center">Our veggy selection of the day:</h2>
 
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
@@ -125,7 +125,7 @@
                         <p class="text-dark strong text-shadow-1">Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Iure blanditiis qui beatae ab, illo nam amet, recusandae corporis mollitia voluptas
                             consequatur! Nostrum velit recusandae eaque blanditiis sapiente neque ipsum sunt!</p>
-                        <button class="btn btn-success buttonh">Chose you burger!</button>
+                        <button class="btn btn-success buttonh">Chose your burger!</button>
 
                     </div>
                 </div>
@@ -195,32 +195,33 @@
 
     <!--SEZ PARTNERSHIP-->
 
-    <div id="certificateContainer">
-        <div class="container marketing text-center py-5">
+<div id="certificateContainer">
+    <div class="container marketing text-center py-4" >
 
-            <h2>Our certificates:</h2>
+        <h2>Our certificates:</h2>
 
 
-            <div class="row my-5 ">
-                <div class="col-lg-3">
-                    <img class="logo1" src="img/img-loghi/veg-certif.jpg" alt="logo vegan">
+        <div class="row ">
+            <div class="col-lg-6 md pb-2">
+                <div class="row">
+                    <div class="col xs"><img class="logo1" src="img/img-loghi/veg-certif.jpg" alt="logo vegan"></div>
+                    <div class="col xs"><img class="logo1" src="img/img-loghi/international-vegan-logo-4.png"
+                            alt="logo vegan"></div>
                 </div>
+            </div>
 
-                <div class="col-lg-3">
-                    <img class="logo1" src="img/img-loghi/international-vegan-logo-4.png" alt="logo vegan">
-
-                </div>
-                <div class="col-lg-3">
-                    <img class="logo1" src="img/img-loghi/veg-label.png" alt="logo vegan">
-                </div>
-
-                <div class="col-lg-3">
-                    <img class="logo1" src="img/img-loghi/veg-austr.png" alt="logo vegan">
+            <div class="col-lg-6 md pb-4">
+                <div class="row">
+                    <div class="col xs"><img class="logo1" src="img/img-loghi/veg-label.png" alt="logo vegan"></div>
+                    <div class="col xs"><img class="logo1" src="img/img-loghi/veg-austr.png" alt="logo vegan"></div>
                 </div>
             </div>
         </div>
     </div>
 
+
+</div>
+    
 
 
     <!--CAROSELLO TESTIMONIANZE-->
