--- a/m2/w2/progettom2w2/index.html
+++ b/m2/w2/progettom2w2/index.html
@@ -5,14 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sito Bootstrap</title>
-    <link text-light href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+   
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    
 </head>
 
 <body>
@@ -240,22 +241,22 @@
             <div class="carousel-item active">
                 <img src="img/LuciaeMarcoVegetarianifelici.jpg" class="d-block w-100" alt="vegan people">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>Lucia e Luca</h5>
+                    <p>Da quando abbiamo scoperto Plant based food non ne riusciamo a farne a meno.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="img/ragazzavegana.jpg" class="d-block w-100" alt="vegan people">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5>Isabella</h5>
+                    <p>"Inizialmente ero scettica, poi mi sono ricreduta"</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="img/ragazzaveganafelice.webp" class="d-block w-100" alt="vegan people">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>Giulia</h5>
+                    <p>"Plant based food è stata per pe la svolta del mio stile di vita!"</p>
                 </div>
             </div>
         </div>
@@ -289,9 +290,7 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
